# Computational-mathematics

./: .gitignore  README.md
SolvingTheCubicEquation/: CMakeLists.txt  main.cpp
SolvingTheCubicEquation/Equation/: Equation.cpp  Equation.h  EquationMember.cpp  EquationMember.h
SolvingTheCubicEquation/rootFinder/: CubicEquationRootsFinder.cpp  CubicEquationRootsFinder.h
SolvingTheCubicEquation/rootFinder/service/: EquationRoot.cpp  EquationRoot.h  Interval.cpp  Interval.h  Side.h
